<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/distance"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_km"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        />


    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/price"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_per_litro"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/autonomy"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/km_per_litro"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_spend"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textAlignment="center"

        />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="R$ 0"
        android:textSize="38sp"
        android:textAlignment="center"
        android:textColor="@color/blue_title"

        />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingVertical="16dp"
        android:backgroundTint="@color/green_button"

        android:onClick="ca"
        />



</LinearLayout>