<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.relativelayout.RelativeLayout">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/distance"

        />

    <TextView
        android:id="@+id/text_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_distance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/total_km"


        />


    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/price"

        android:layout_below="@id/text_distance"
        />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/price_per_litro"

         />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/autonomy"

        android:layout_below="@id/text_price"
        />

    <TextView
        android:id="@+id/text_autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_autonomy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/km_per_litro"

         />

    <TextView
        android:id="@+id/text_spend"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_autonomy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/total_spend"
        android:textAlignment="center"
        android:textAllCaps="true"

        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_spend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="R$ 0"
        android:textColor="@color/blue_title"

        android:textSize="38sp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingVertical="16dp"
        android:backgroundTint="@color/green_button"

        android:layout_below="@id/text_total_value"
        />



</RelativeLayout>